# learn-de-opencode

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LEARNING_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/commands/: speckit.analyze.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: dmbok-checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
config/: alerting-rules.yaml  generator.yaml
dashboard/: package-lock.json  package.json
dashboard/pages/: data-catalog.md  data-quality.md  financial-analytics.md  index.md  ingestion-health.md
flink-jobs/: .dockerignore  Dockerfile  pom.xml
generator/: Dockerfile  requirements.txt
generator/src/: main.py
scripts/: Dockerfile.init-iceberg  compact.py  health-check.sh  init_iceberg.py  query.py  requirements.txt  schema_evolution.py  session_metadata.py
specs/001-streaming-financial-pipeline/: data-dictionary.md  data-model.md  dmbok-compliance.md  performance-baseline.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-report.md
specs/001-synthetic-financial-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-duckdb-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sql-transformations/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-data-quality-checks/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-evidence-dashboard/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-scd2-accounts/: plan.md  (+4 more)
src/: generate_transactions.py  ingest_transactions.py  run_catalog.py  run_checks.py  run_dim_build.py  run_pipeline.py  run_transforms.py
tests/: conftest.py
(+183 files in other folders)
