[project]
name = "learn-de-pipeline"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.21.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring Docker services (deselect with '-m \"not integration\"')",
    "contract: marks contract validation tests",
]

[tool.coverage.run]
source = ["generator/src"]
omit = ["tests/*", "*/__init__.py", "generator/src/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
